--- a/.hgignore
+++ b/.hgignore
@@ -1,10 +1,12 @@
 glob:*.class
 glob:.*
-glob:test.swc
-glob:test.swf
 glob:dist/
 glob:dist.tar.gz
 glob:descriptor.proto.as3/
 glob:unittest.proto.as3/
 glob:plugin.proto.java/
 glob:options.proto.java/
+glob:config.mk
+glob:*~
+glob:*.swf
+glob:*.swc
