--- a/.hgignore
+++ b/.hgignore
@@ -7,6 +7,7 @@ glob:unittest.proto.as3/
 glob:plugin.proto.java/
 glob:options.proto.java/
 glob:config.mk
+glob:MANIFEST.MF
 glob:*~
 glob:*.swf
 glob:*.swc
