Ignore *.tar.gz

--- a/.hgignore
+++ b/.hgignore
@@ -1,7 +1,7 @@
 glob:*.class
 glob:.*
 glob:dist/
-glob:dist.tar.gz
+glob:*.tar.gz
 glob:descriptor.proto.as3/
 glob:unittest.proto.as3/
 glob:plugin.proto.java/
